--- a/corprules.in
+++ b/corprules.in
@@ -2783,7 +2783,7 @@ IMPACT		lack of influence on
 EVAL_SYSTEM	SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN
 EVAL_SYSTEM	SCI_MATH_ADV SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN
 
-EVAL_FACT	EVAL_SYSTEM's IMPACT SCI_A_FACT
+EVAL_FACT	EXP_ADJ VERBION's IMPACT SCI_A_FACT
 EVAL_FACT	the SCI_MATH_ADV SCI_BUZZWORD_ADJ nature of EVAL_SYSTEM 
 EVAL_FACT	the SCI_MATH_ADV SCI_BUZZWORD_ADJ behaviour of SCI_MATH_ADJ SCI_BUZZWORD_NOUN
 EVAL_FACT	SCI_A_FACT
@@ -5266,7 +5266,7 @@ FILLER_SURPRISE_2	LIT_OFTEN conflicts with the need to provide SCI_THING to SCI_
 
 FILLER_SENTENCE LAME_OBSERVATION
 
-LAME_OBSERVATION After all, `Rome wasn't built in a day'. 
+LAME_OBSERVATION After all, `Rome wasn't built in a day'
 LAME_OBSERVATION+5 It CLEARLY remains to be SCI_VERBED whether OBS_END
 LAME_OBSERVATION+5 SCI_B_LEADIN_C TAKE_NOTE_THAT if OBS_END, it SCI_MAY cause SCI_ADJ_ADV BAD EXP_ADJ FINDINGs
 LAME_OBSERVATION+5 We openly admit that, LIT_ALTHOUGH similar SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN are NOTED for their IMPACT AREA, OVERVERBING SCI_THING_P can be SCI_EXPENSIVE, which is not SCI_ADJ_ADV quite as SCI_FAIR as it might sound FUNNEND
@@ -5927,7 +5927,7 @@ EXTRA_SENTENCE It is LIT_OFTEN the case that SCI_COMPLEXNOUN ARISEs due to the L
 EXTRA_SENTENCE This CLEARLY SCI_DIAGRAM_VERBS the SCI_STATUS_ADJ LIT_INCREASING behaviour.
 EXTRA_SENTENCE By MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREFIX} level, we successfully SCI_ACHIEVED a POSSIBLE_NV SOFTWARE_ADJ EVALUATION.
 EXTRA_SENTENCE We were able to SCI_GOAL_ACHIEVE an POSSIBLE_V SOFTWARE_ADJ EVALUATION by MULTIPLE_VERBING the PROP_OR_MEASUREMENT_NO_SYSTEM.
-EXTRA_SENTENCE LAME_OBSERVATION
+EXTRA_SENTENCE LAME_OBSERVATION.
 
 SCI_CLARITY+5 the sake of accuracy
 SCI_CLARITY+1 transparency
