--- a/corprules.in
+++ b/corprules.in
@@ -3759,8 +3759,8 @@ CDESY	in THE_WILD
 
 CPRE+5
 CPRE CNUM
-CNUM+3 NONZ
-CNUM NONZ,CNUM
+CNUM+3 NONZ-
+CNUM NONZ,CNUM-
 ELEM hydrogen
 ELEM helium
 ELEM lithium
@@ -3826,9 +3826,9 @@ ESUF ous CNAME
 CNAME+2 ELEM EMIDESUF
 CNAME+3 EMIDESUF
 
-CHEM+2 CPRE-CNAME
-CHEM+2 the CDADJ CDES CPRE-CNAME
-CHEM CPRE-CNAME (CDESY)
+CHEM+2 CPRECNAME
+CHEM+2 the CDADJ CDES CPRECNAME
+CHEM CPRECNAME (CDESY)
 
 CSYM H
 CSYM He
