--- a/corprules.in
+++ b/corprules.in
@@ -397,11 +397,11 @@ SCI_IPF_FINAL SCI_B_LEADIN_C we conclude this study with a summary of SYSNAME in
 
 PARENTH , you SCI_MAY recall, 
 PARENTH , SOSEEM,
-PARENTH , PEOPLE_SAY,
+PARENTH  (PEOPLE_SAY)
 
-SCI_INTRO_A   Many TRACE_UNIT_LONGs ago, SCI_COUNTRY_MAYBE SCI_PEOPLE PARENTH were involved in the SOFTWARE_ADJ SCI_VERBION of SCI_BUZZWORD_ADJ, EXP_ADJ EXP_WHERE_UM EXP_WHERE_UMs for the development of SCI_OUR_SYSTEM XXX
+SCI_INTRO_A+1   Many TRACE_UNIT_LONGs ago, SCI_COUNTRY_MAYBE SCI_PEOPLE PARENTH were involved in the SOFTWARE_ADJ SCI_VERBION of SCI_BUZZWORD_ADJ, EXP_ADJ EXP_WHERE_UM EXP_WHERE_UMs for the development of SCI_OUR_SYSTEM XXX
 
-SCI_INTRO_A LIT_ALTHOUGH SCI_GENERIC_NOUN SCI_MAY not SCI_PROVE_VERB SCI_THING_P in the SCI_MANNER initially expected, SCI_INTRO_THESIS
+SCI_INTRO_A+1 LIT_ALTHOUGH SCI_GENERIC_NOUN SCI_MAY not SCI_PROVE_VERB SCI_THING_P in the SCI_MANNER initially expected, SCI_INTRO_THESIS
 
 SCI_AGE+5 TRACE_UNIT_LONG
 SCI_AGE	17$^{th}$ Century
@@ -410,7 +410,7 @@ SCI_AGE	19$^{th}$ Century
 SCI_AGE	20$^{th}$ Century
 SCI_AGE 21$^{st}$ Century
 SCI_AGE+5 Millenium
-SCI_INTRO_A In the early part of the SCI_AGE, LIT_GREAT leaps forward in understanding SCI_A_FACT occurred by EMULATING the SCI_VERBION of SCI_GENERIC_NOUN in THE_WILD XXX
+SCI_INTRO_A+1 In the early part of the SCI_AGE, LIT_GREAT leaps forward in understanding SCI_A_FACT occurred by EMULATING the SCI_VERBION of SCI_GENERIC_NOUN in THE_WILD XXX
 
 SCI_INTRO_A	SCI_ANUMBER SCI_COUNTRY_MAYBE SCI_PEOPLE would SCI_AGREE that, had it not been for SCI_GENERIC_NOUN , the SCI_ACT SCI_MAY never have occurred XXX
 SCI_INTRO_A+5	SCI_COUNTRY_MAYBE SCI_PEOPLE working SCI_TOGETHERWITH the field of SCI_FIELD today would SCI_AGREE that the SCI_ACT would not be possible without the SCI_SYS_VERBION of SOFTWARE_ADJ SCI_THING_P  XXX
@@ -5360,7 +5360,7 @@ SCI_ACT		SCI_ACT_A SCI_THING_P that SCI_EFFECT
 SCI_ACT_A	understanding of SCI_THING_MOD with respect to 
 SCI_ACT_A	SCI_ADJ SCI_VERBION of SCI_THING and
 SCI_ACT_A+15	SCI_VERBION of 
-SCI_ACT_A+15	SCI_BUZZWORD_NOUN of 
+SCI_ACT_A+15	SCI_USE of 
 SCI_ACH	SCI_VERBED SCI_THING_MOD
 SCI_ACH	SCI_VERBED SCI_THING_MOD (which SCI_EFFECT)
 SCI_ACH_PRES	SCI_VERBING SCI_THING_MOD
@@ -5537,7 +5537,7 @@ SCC_EXPR_EXP	SCC_EXPR
 SCC_EXPR_EXP	n
 
 PROPENDER+30 
-PROPENDER+10 (LREV enough)
+PROPENDER+3 (LREV enough)
 PROPENDER XXX (FILLER_SENTENCE)
 PROPENDER (no PUN intended)
 
