--- a/corprules.in
+++ b/corprules.in
@@ -2802,7 +2802,7 @@ IMPACT		lack of influence on
 EVAL_SYSTEM	SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN
 EVAL_SYSTEM	SCI_MATH_ADV SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN
 
-EVAL_FACT	EXP_ADJ VERBION's IMPACT SCI_A_FACT
+EVAL_FACT	EXP_ADJ SCI_VERBION's IMPACT SCI_A_FACT
 EVAL_FACT	the SCI_MATH_ADV SCI_BUZZWORD_ADJ nature of EVAL_SYSTEM 
 EVAL_FACT	the SCI_MATH_ADV SCI_BUZZWORD_ADJ behaviour of SCI_MATH_ADJ SCI_BUZZWORD_NOUN
 EVAL_FACT	SCI_A_FACT
@@ -5208,7 +5208,6 @@ $\hspace{-1.5mm}$
 \footnote{
 SCI_INTRO_FILLER.}. 
 }
-XXX		!
 
 SCI_MAY might
 SCI_MAY may
@@ -7823,7 +7822,7 @@ ADJECTIVE natural
 ADJECTIVE+3 SIGN
 ADJECTIVE normal
 ADJECTIVE null
-ADJECTIVE one-to-one
+#ADJECTIVE one-to-one
 ADJECTIVE `onto' 
 ADJECTIVE open
 ADJECTIVE ordered
