--- a/corprules.in
+++ b/corprules.in
@@ -1351,7 +1351,7 @@ DOTPARA
 
 DOTPARA DOTOPENER DOTS DOTCONC
 
-DOTOPENER The SCI_VERBION of EXP_ADJ SCI_BUZZWORD_NOUN MATTERS, due to its SCI_ADJ CONSTRAINT_TYPE in OVERVERBING SCI_THING_P XXX SCI_IPF_MID TAKE_NOTE_THAT we SCI_SYS_VERB an SCI_ADJ_V SCI_MANNER with regard to a IMPL_COMPONENT, which is HACKED for use with SCI_THING_P. LIT_MIDDLE MODEL_CONCL 
+DOTOPENER The SCI_VERBION of EXP_ADJ SCI_BUZZWORD_NOUN MATTERS, due to its SCI_ADJ CONSTRAINT_TYPE in OVERVERBING SCI_THING_P XXX SCI_IPF_MID TAKE_NOTE_THAT we SCI_SYS_VERB an SCI_ADJ_V SCI_MANNER with regard to a IMPL_COMPONENT, which is HACKED for use with SCI_THING_P. CONNECT MODEL_CONCL 
 
 DOTOPENER IMPL_INTRO IMPL_MID CONNECT we present several AMBITIOUS SCI_BUZZWORD_NOUN for MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREFIX} level SCI_AB_A_END, LIT_ALTHOUGH this is LREV SCI_FAIR and as SCI_EXPENSIVE as it is BAD XXX LIT_REVERSAL, RELWORK_CONCL 
 
