--- a/corprules.in
+++ b/corprules.in
@@ -592,12 +592,13 @@ SCI_GENERIC_THESIS we SCI_PROVE_VERB that, LIT_ALTHOUGH SCI_OVERALL_THESIS_PROVE
 SCI_GENERIC_THESIS we concentrate our efforts on SCI_PROVE_VERBING the THISIDEA that SCI_OVERALL_THESIS_PROVE
 SCI_GENERIC_THESIS we SCI_PRESENT_VERB SCI_OVERALL_THESIS_THING ({SYSNAME}), which we use to SCI_PROVE_VERB that SCI_OVERALL_THESIS_PROVE
 
-SCI_OVERALL_THESIS_PROVE+10 DISCUSS SCI_GENERIC_THESIS
-SCI_OVERALL_THESIS_PROVE DISCUSS (DISCUSS) FILLER_SENTENCE
+#SCI_OVERALL_THESIS_PROVE+10 DISCUSS SCI_GENERIC_THESIS
+#SCI_OVERALL_THESIS_PROVE DISCUSS (DISCUSS) FILLER_SENTENCE
 SCI_OVERALL_THESIS_PROVE+10 SCI_THING_MOD and SCI_THING_MOD are LIT_OFTEN DIFFERENT
 SCI_OVERALL_THESIS_PROVE+10 SCI_THING_MOD and SCI_THING_MOD can SCI_VERB_PL to SCI_SOLVE_CLAUSE
 SCI_OVERALL_THESIS_PROVE+10 SCI_THING_P can be made EXP_ADJ, EXP_ADJ, and EXP_ADJ
 SCI_OVERALL_THESIS_PROVE+10 the SCI_STATUS_ADJ EXP_ADJ algorithm for the SCI_ACT SCI_BY_WHO_SOMETIMES SCI_PROOF_PROP
+SCI_OVERALL_THESIS_PROVE    much ado was furthered
 
 SCI_BY_WHO_SOMETIMES+40
 SCI_BY_WHO_SOMETIMES CITATION
@@ -1096,7 +1097,7 @@ IMPL_MID_X the IMPL_COMPONENT and the IMPL_COMPONENT must run IMPL_RUN_TYPE
 # IMPL_MID_X our IMPL_COMPONENT REQUIRED 
 
 IMPL_CONCL we SCI_AIM to release all of this research under a LICENSE_TYPE licence XXX
-IMPL_CONCL overall, SCI_OUR_SYSTEM adds only modest complexity to RELATED SCI_BUZZWORD_ADJ SCI_SYSTEM_PL XXX
+IMPL_CONCL overall, SCI_OUR_SYSTEM adds only modest complexity to RELATED SCI_SYSTEM_PL XXX
 IMPL_CONCL one SCI_CANNOT imagine other SCI_APPROACH_PL to the implementation that would have made PROGRAMMING_VERBING it much simpler XXX
 IMPL_CONCL+3 IMPL_MID_X XXX
 
@@ -1680,7 +1681,7 @@ RELWORK_INTRO_1 in designing SCI_OUR_SYSTEM, we drew on RELATED work from a numb
 RELWORK_INTRO_1+10 RELWORK_INTRO
 
 RELWORK_INTRO while we know of no other studies on SCI_GENERIC_NOUN, several efforts have been made to SCI_VERB SCI_THING_MOD RELWORK_XXX
-RELWORK_INTRO we now compare our approach to RELATED SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN SCI_APPROACH_PL RELWORK_XXX
+RELWORK_INTRO we now compare our approach to RELATED SCI_BUZZWORD_ADJ SCI_APPROACH_PL RELWORK_XXX
 RELWORK_INTRO our SCI_APPROACH is related to research into SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN, SCI_THING_MOD, and the SCI_ACT RELWORK_XXX
 RELWORK_INTRO the SCI_VERBION of SCI_GENERIC_NOUN has been widely studied RELWORK_XXX
 RELWORK_INTRO LIT_ALTHOUGH we are the first to SCI_PRESENT_VERB SCI_GENERIC_NOUN in this light, much RELATED work has been devoted to the SCI_ACT RELWORK_XXX
@@ -1688,7 +1689,7 @@ RELWORK_INTRO SCI_OUR_SYSTEM builds on RELATED work in SCI_BUZZWORD_ADJ SCI_BUZZ
 RELWORK_INTRO the concept of SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN has been SCI_VERBED before in the literature RELWORK_XXX
 RELWORK_INTRO a major source of our inspiration is early work SCI_BY_WHO_SOMETIMES on SCI_GENERIC_NOUN RELWORK_XXX
 RELWORK_INTRO a number of RELATED SCI_SYSTEM_PL have SCI_VERBED SCI_GENERIC_NOUN, either for the SCI_ACT RELWORK_CITATION or for the SCI_ACT RELWORK_XXX
-RELWORK_INTRO Several SCI_BUZZWORD_ADJ and SCI_BUZZWORD_ADJ SCI_SYSTEM_PL have been proposed in the literature RELWORK_XXX
+RELWORK_INTRO Several SCI_BUZZWORD_ADJ and SCI_SYSTEM_PL have been proposed in the literature RELWORK_XXX
 RELWORK_INTRO RELWORK_MID_X RELWORK_XXX
 
 RELWORK_MID LIT_MIDDLE_MAYBE RELWORK_MID_X RELWORK_XXX
@@ -3497,6 +3498,7 @@ SCI_BUZZWORD_NOUN+30 hierarchies
 #SCI_BUZZWORD_NOUN+30 cases
 SCI_BUZZWORD_NOUN+30 manifestations
 SCI_BUZZWORD_NOUN+30 representations
+SCI_BUZZWORD_NOUN    bionouns
 
 SCI_PROBLEM+35 complication
 SCI_PROBLEM+30 hitch
@@ -5356,7 +5358,7 @@ SCI_A_FACT	the SCI_COMPLEXNOUN of SCI_FIELD
 SCI_A_FACT	the work of SCI_COUNTRY SCI_PERSON SCI_SOURCE
 SCI_ACT+30	SCI_ACT_A SCI_THING_P 
 SCI_ACT		SCI_ACT_A SCI_THING_P that SCI_EFFECT
-SCI_ACT_A	understanding of SCI_THING_MOD with respect to 
+SCI_ACT_A	the understanding of SCI_THING_MOD with respect to 
 SCI_ACT_A	SCI_ADJ SCI_VERBION of SCI_THING and
 SCI_ACT_A+15	SCI_VERBION of 
 SCI_ACT_A+15	SCI_USE of 
@@ -6655,7 +6657,7 @@ PIERING {
 
 PIETOPIC+1 MATHADJ PROPNOUN
 PIETOPIC+1 SCI_GENERIC_NOUNX
-PIETOPIC+1 SCI_THING
+PIETOPIC+1 EXP_ADJ SCI_VERBIONs
 PIETOPIC+1 SCI_FIELD
 PIETOPIC+1   EXP_ADJ SCI_MODEL_TYPE_P
 PIETOPIC+1   CONSTRAINT_TYPE
@@ -7936,6 +7938,11 @@ PREFIXX post
 PREFIXX pro
 PREFIXX trans
 PREFIXX FAMOUS
+
+PREFIXX multi
+PREFIXX bio
+PREFIXX poly
+PREFIXX tetra
 
 PREFIXX atto
 PREFIXX femto
