--- a/corprules.in
+++ b/corprules.in
@@ -2494,6 +2494,8 @@ EXP_TREK		temporal
 EXP_TREK		focused
 EXP_TREK		sonic
 EXP_TREK		PREFIXX-regenerative
+EXP_TREK		continuum
+EXP_TREK		PREFIXXverse
 
 #EXP_ADJ+1000 `GOOD_ADJ'
 EXP_ADJ+30		`GOOD_ADJ'
@@ -2562,17 +2564,20 @@ EXP_WHERE_UM	regimen
 
 
 # common places to run experiments
-EXP_WHERE_CMN+10	lab
-EXP_WHERE_CMN+10	device
-EXP_WHERE_CMN+10	system
-EXP_WHERE_CMN+10	network
-EXP_WHERE_CMN+10	organisation
-EXP_WHERE_CMN+10	arrangement
-EXP_WHERE_CMN+10	mechanism
-EXP_WHERE_CMN+10	machine
+EXP_WHERE_CMN+20	lab
+EXP_WHERE_CMN+20	device
+EXP_WHERE_CMN+20	system
+EXP_WHERE_CMN+20	network
+EXP_WHERE_CMN+20	organisation
+EXP_WHERE_CMN+20	arrangement
+EXP_WHERE_CMN+20	mechanism
+EXP_WHERE_CMN+20	machine
 EXP_WHERE_CMN+5	contraption
 EXP_WHERE_CMN	contrivance
 EXP_WHERE_CMN	doohickey
+EXP_WHERE_CMN	doodad
+EXP_WHERE_CMN	thingamibob
+EXP_WHERE_CMN	gameboy
 EXP_WHERE_CMN	whatnot
 
 #EXP_WHERE_CMN	corporation
@@ -3640,6 +3645,7 @@ SCI_THING	NOUN_12
 SCI_THING	NOUN_10
 
 SCI_THING_S	SYSNAME
+SCI_THING_S	PREFIXXfunctioner
 SCI_THING_S	surface functionalisation
 SCI_THING_P	sensor networks
 SCI_THING_S	courseware
@@ -3808,8 +3814,8 @@ EMID2 monium
 EMID2 benzo
 EMID2 nitr
 
-EMID+2 EMID1EMID2
-EMID EMID
+EMID+5 EMID1EMID2
+EMID EMIDEMID
 
 ESUF ate
 ESUF ose
@@ -3874,8 +3880,8 @@ CSENDX CSEND$^{-}$
 CSENDX CSEND$^{NONZ-}$
 CSENDX CSEND$^{\bullet}$
 
-CHEMXU+4 CSYM CSENDX
-CHEMXU CHEMXU
+CHEMXU+4 CSYMCSENDX
+CHEMXU CHEMXUCHEMXU
 
 CHEMX CHEMXU
 CHEMX the CDADJ CDES CHEMXU
@@ -4859,7 +4865,7 @@ SCI_PROVE_VERBED+30 scientifically METAVERBED
 SCI_PROVE_VERBED+30 medically METAVERBED
 SCI_PROVE_VERBED+30 solved
 SCI_PROVE_VERBED+30 addressed
-SCI_PROVE_VERBED orgasmed
+SCI_PROVE_VERBED orgasmed out
 
 SCI_PROVE_VERBING demonstrating
 SCI_PROVE_VERBING arguing
@@ -5991,7 +5997,7 @@ ABOVE In this case
 
 SCI_GRAPH_CAPTION EXTRA_SENTENCE
 
-EXTRA_SENTENCE SCI_OUR_SYSTEM SCI_CAN METAVERB SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN LIT_BETTER than the FINDING by SCI_BY_WHO.
+EXTRA_SENTENCE LIT_MIDDLE SCI_OUR_SYSTEM SCI_CAN METAVERB SCI_BUZZWORD_ADJ SCI_BUZZWORD_NOUN LIT_BETTER than the FINDING by SCI_BY_WHO.
 EXTRA_SENTENCE It is LIT_OFTEN the case that SCI_COMPLEXNOUN ARISEs due to the LREV BAD SCI_VERBION of COMPILED MODEL_Ss.
 EXTRA_SENTENCE This CLEARLY SCI_DIAGRAM_VERBS the SCI_STATUS_ADJ LIT_INCREASING behaviour.
 EXTRA_SENTENCE By MAXIMIZING our SCI_SYSTEM's EVAL_MEASUREMENT_UM at the \textit{PREFIX} level, we successfully SCI_ACHIEVED a POSSIBLE_NV SOFTWARE_ADJ EVALUATION.
@@ -6247,6 +6253,8 @@ LATEX_DOCCLASS
 LATEX_FONTCLASS
 LATEX_CITEPACK
 \usepackage[raggedright]{titlesec}
+\usepackage{eurosym}
+\DeclareMathSymbol{\comma}{\mathpunct}{letters}{"3B}
 
 \usepackage{tocloft}
 \addtolength{\cftsecnumwidth}{10pt}
@@ -6662,28 +6670,53 @@ PIETOPIC+1 SCI_FIELD
 PIETOPIC+1   EXP_ADJ SCI_MODEL_TYPE_P
 PIETOPIC+1   CONSTRAINT_TYPE
 PIETOPIC OTHER
+PIETOPIC SCI_COUNTRY_MAYBE SCI_THING
+
+MTOPIC PIETOPIC: MONEH
+
+DOLL \pounds
+DOLL+30 \$
+DOLL \yen
+DOLL \euro
+
+MULTIDIG+6 DIGITDIGIT
+MULTIDIG DIGITMULTIDIG
+
+MONEH DOLL$NONZMULTIDIG\commaDIGIT00$
 
 #6 SECTORS
 PIELIST+30 15.0/PIETOPIC/1,17.0/PIETOPIC/-1,16.0/PIETOPIC/1,17.0/PIETOPIC/-1,19.0/PIETOPIC/1,16.0/PIETOPIC/-1
+PIELIST+30 15.0/MTOPIC/1,17.0/MTOPIC/-1,16.0/MTOPIC/1,17.0/MTOPIC/-1,19.0/MTOPIC/1,16.0/MTOPIC/-1
 
 #5 SECTORS
 PIELIST+30 22.0/PIETOPIC/1,24.0/PIETOPIC/-1,21.0/PIETOPIC/1,25.0/PIETOPIC/-1,8.0/PIETOPIC/0
+PIELIST+30 22.0/MTOPIC/1,24.0/MTOPIC/-1,21.0/MTOPIC/1,25.0/MTOPIC/-1,8.0/MTOPIC/0
 
 PIELIST+30 20.5/PIETOPIC/-1,23.5/PIETOPIC/1,22.5/PIETOPIC/-1,24.5/PIETOPIC/0,9.0/PIETOPIC/1
+PIELIST+30 20.5/MTOPIC/-1,23.5/MTOPIC/1,22.5/MTOPIC/-1,24.5/MTOPIC/0,9.0/MTOPIC/1
 
 PIELIST+30 25.0/PIETOPIC/1,21.0/PIETOPIC/-1,24.0/PIETOPIC/0,23.0/PIETOPIC/1,7.0/PIETOPIC/-1
+PIELIST+30 25.0/MTOPIC/1,21.0/MTOPIC/-1,24.0/MTOPIC/0,23.0/MTOPIC/1,7.0/MTOPIC/-1
 
 PIELIST+30 21.5/PIETOPIC/-1,22.0/PIETOPIC/0,24.0/PIETOPIC/1,22.5/PIETOPIC/-1,10.0/PIETOPIC/1
+PIELIST+30 21.5/MTOPIC/-1,22.0/MTOPIC/0,24.0/MTOPIC/1,22.5/MTOPIC/-1,10.0/MTOPIC/1
 
 PIELIST+30 22.5/PIETOPIC/0,23.5/PIETOPIC/1,21.0/PIETOPIC/-1,25.0/PIETOPIC/1,8.0/PIETOPIC/-1
+PIELIST+30 22.5/MTOPIC/0,23.5/MTOPIC/1,21.0/MTOPIC/-1,25.0/MTOPIC/1,8.0/MTOPIC/-1
 
 #4 SECTORS
 PIELIST+30 24.5/PIETOPIC/1,25.5/PIETOPIC/-1,23.0/PIETOPIC/-1,27.0/PIETOPIC/1
+PIELIST+30 24.5/MTOPIC/1,25.5/MTOPIC/-1,23.0/MTOPIC/-1,27.0/MTOPIC/1
 
 #3 SECTORS
 PIELIST+30 33.5/PIETOPIC/1,31.0/PIETOPIC/-1,35.5/PIETOPIC/0
+PIELIST+30 33.5/MTOPIC/1,31.0/MTOPIC/-1,35.5/MTOPIC/0
+
 PIELIST+30 35.0/PIETOPIC/-1,33.0/PIETOPIC/0,32.0/PIETOPIC/1
+PIELIST+30 35.0/MTOPIC/-1,33.0/MTOPIC/0,32.0/MTOPIC/1
+
 PIELIST+30 34.0/PIETOPIC/0,31.0/PIETOPIC/-1,35.0/PIETOPIC/1
+PIELIST+30 34.0/MTOPIC/0,31.0/MTOPIC/-1,35.0/MTOPIC/1
 
 OTHER+30 other
 OTHER+30 misc.
@@ -6817,31 +6850,44 @@ L1 north west
 L2 south west
 R1 north east
 R2 south east
-NLEN 6
+NLEN 6.5
+
+FTOPIC	\footnotesize{PIETOPIC}
+FMTOPIC	\footnotesize{MTOPIC}
 
 #6 SECTORS
-PIEFANCYLIST 15.0/COLOUR/PIETOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/PIETOPIC/1/1/1/R1/R2/KINK,16.0/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,17.0/COLOUR/PIETOPIC/-1/-1/-1/L1/L2/KINK,19.0/COLOUR/PIETOPIC/-1/1/-1.5/R1/R2/FKINK,16.0/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 15.0/COLOUR/FTOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,16.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,17.0/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,19.0/COLOUR/FTOPIC/-1/1/-1.5/R1/R2/FKINK,16.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 15.0/COLOUR/FMTOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/FMTOPIC/1/1/1/R1/R2/KINK,16.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,17.0/COLOUR/FMTOPIC/-1/-1/-1/L1/L2/KINK,19.0/COLOUR/FMTOPIC/-1/1/-1.5/R1/R2/FKINK,16.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
 #5 SECTORS
-PIEFANCYLIST 22.0/COLOUR/PIETOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/PIETOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/PIETOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 22.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FTOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 22.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FMTOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 20.5/COLOUR/PIETOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,24.5/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/PIETOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 20.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 20.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,24.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 25.0/COLOUR/PIETOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/PIETOPIC/1/-1/0/L1/L2/KINK,23.0/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/PIETOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 25.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FTOPIC/1/-1/0/L1/L2/KINK,23.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 25.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FMTOPIC/1/-1/0/L1/L2/KINK,23.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 10.0/COLOUR/PIETOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/PIETOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/PIETOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 10.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 10.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/FMTOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/FMTOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
-PIEFANCYLIST 22.5/COLOUR/PIETOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/PIETOPIC/-1/0/0/L1/L2/KINK,25.0/COLOUR/PIETOPIC/1/1/-2/R1/R2/FKINK,8.0/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 22.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FTOPIC/-1/0/0/L1/L2/KINK,25.0/COLOUR/FTOPIC/1/1/-2/R1/R2/FKINK,8.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 22.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FMTOPIC/-1/0/0/L1/L2/KINK,25.0/COLOUR/FMTOPIC/1/1/-2/R1/R2/FKINK,8.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
 #4 SECTORS 
-PIEFANCYLIST 24.5/COLOUR/PIETOPIC/1/NLEN/0/R1/R2/,25.5/COLOUR/PIETOPIC/-1/-NLEN/0/L1/L2/,23/COLOUR/PIETOPIC/1/-1/-1/L1/L2/KINK,27/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 24.5/COLOUR/FTOPIC/1/NLEN/0/R1/R2/,25.5/COLOUR/FTOPIC/-1/-NLEN/0/L1/L2/,23/COLOUR/FTOPIC/1/-1/-1/L1/L2/KINK,27/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 24.5/COLOUR/FMTOPIC/1/NLEN/0/R1/R2/,25.5/COLOUR/FMTOPIC/-1/-NLEN/0/L1/L2/,23/COLOUR/FMTOPIC/1/-1/-1/L1/L2/KINK,27/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
 #3 SECTORS
-PIEFANCYLIST 33.5/COLOUR/PIETOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/PIETOPIC/1/-NLEN/0/L1/L2/,35.5/COLOUR/PIETOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 33.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,35.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 33.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,35.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
-PIEFANCYLIST 35.0/COLOUR/PIETOPIC/-1/NLEN/0/R1/R2/,33.0/COLOUR/PIETOPIC/0/-NLEN/0/L1/L2/,32.0/COLOUR/PIETOPIC/1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 35.0/COLOUR/FTOPIC/-1/NLEN/0/R1/R2/,33.0/COLOUR/FTOPIC/0/-NLEN/0/L1/L2/,32.0/COLOUR/FTOPIC/1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 35.0/COLOUR/FMTOPIC/-1/NLEN/0/R1/R2/,33.0/COLOUR/FMTOPIC/0/-NLEN/0/L1/L2/,32.0/COLOUR/FMTOPIC/1/1/-1/R1/R2/FKINK
 
-PIEFANCYLIST 34.0/COLOUR/PIETOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/PIETOPIC/-1/-NLEN/0/L1/L2/,35.0/COLOUR/PIETOPIC/1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 34.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FTOPIC/-1/-NLEN/0/L1/L2/,35.0/COLOUR/FTOPIC/1/1/-1/R1/R2/FKINK
+PIEFANCYLIST 34.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FMTOPIC/-1/-NLEN/0/L1/L2/,35.0/COLOUR/FMTOPIC/1/1/-1/R1/R2/FKINK
 
 COORD 0
 COORD 1
@@ -7943,6 +7989,8 @@ PREFIXX multi
 PREFIXX bio
 PREFIXX poly
 PREFIXX tetra
+PREFIXX omni
+PREFIXX	auto
 
 PREFIXX atto
 PREFIXX femto
