--- a/graphviz.in
+++ b/graphviz.in
@@ -251,7 +251,7 @@ NODE_LABEL_PROG+10	"SYSNAME"
 NODE_LABEL_PROG		"MNOUNS"
 NODE_LABEL_PROG		"network"
 NODE_LABEL_PROG		"CONSTRAINT_TYPEX"
-NODE_LABEL_PROG		"shell"
+NODE_LABEL_PROG		"lab"
 NODE_LABEL_PROG		"EXP_WHERE_CMN"
 
 
