--- a/corprules.in
+++ b/corprules.in
@@ -1107,10 +1107,10 @@ IMPL_RUN_TYPE in the same SCI_MODEL_TYPE
 IMPL_RUN_TYPE with a similar starting viewpoint
 IMPL_RUN_TYPE with the same company
 
-IMPL_COMPONENT industry record 
+IMPL_COMPONENT industry record
 IMPL_COMPONENT academic portfolio
 IMPL_COMPONENT enterprise dossier
-IMPL_COMPONENT centralised logging facility
+IMPL_COMPONENT centralised logging station
 IMPL_COMPONENT University archive collection
 IMPL_COMPONENT corporate database
 IMPL_COMPONENT optimised innovation
@@ -2609,7 +2609,7 @@ MODEL_S archetype
 
 
 EXP_WHERE	EXP_WHERE_RARE
-EXP_WHERE+4	EXP_WHERE_ADJ EXP_WHERE_CMN
+EXP_WHERE+10	EXP_WHERE_ADJ EXP_WHERE_CMN
 
 
 EXP_WHERE_ADJ	SCI_BUZZWORD_ADJ
@@ -6672,51 +6672,68 @@ PIETOPIC+1   CONSTRAINT_TYPE
 PIETOPIC OTHER
 PIETOPIC SCI_COUNTRY_MAYBE SCI_THING
 
-MTOPIC PIETOPIC: MONEH
+MTOPIC MONEH
 
 DOLL \pounds
 DOLL+30 \$
 DOLL \yen
 DOLL \euro
 
-MULTIDIG+6 DIGITDIGIT
-MULTIDIG DIGITMULTIDIG
+MULTIDIG+5 NONZ
+MULTIDIG MULTIDIG\commaDIGITDIGITDIGIT
 
-MONEH DOLL$NONZMULTIDIG\commaDIGIT00$
+SHORTITEM MEMORY_TYPE
+SHORTITEM PROCESSOR_TYPEs
+SHORTITEM STORAGE_TYPEs
+SHORTITEM EXPANSION_ITEMs
+
+COSTITEMS+5 SHORTITEM
+COSTITEMS SCI_COUNTRY_MAYBE SHORTITEM
+COSTITEMS+2 EXP_ADJ SHORTITEM
+COSTITEMS+3 EXP_WHEREs
+
+PERUNIT per unit of
+PERUNIT worth of
+PERUNIT in
+
+MONEH DOLL$NONZMULTIDIG$ PERUNIT COSTITEMS
+MONEH DOLL$NONZDIGITMULTIDIG$ PERUNIT COSTITEMS
+MONEH DOLL$NONZ\commaDIGITDIGITDIGIT$ PERUNIT COSTITEMS
+
 
 #6 SECTORS
-PIELIST+30 15.0/PIETOPIC/1,17.0/PIETOPIC/-1,16.0/PIETOPIC/1,17.0/PIETOPIC/-1,19.0/PIETOPIC/1,16.0/PIETOPIC/-1
-PIELIST+30 15.0/MTOPIC/1,17.0/MTOPIC/-1,16.0/MTOPIC/1,17.0/MTOPIC/-1,19.0/MTOPIC/1,16.0/MTOPIC/-1
+PIELIST+30 15.0/FTOPIC/1,17.0/FTOPIC/-1,16.0/FTOPIC/1,17.0/FTOPIC/-1,19.0/FTOPIC/1,16.0/FTOPIC/-1
+PIELIST+30 15.0/FMTOPIC/1,17.0/FMTOPIC/-1,16.0/FMTOPIC/1,17.0/FMTOPIC/-1,19.0/FMTOPIC/1,16.0/FMTOPIC/-1
 
 #5 SECTORS
-PIELIST+30 22.0/PIETOPIC/1,24.0/PIETOPIC/-1,21.0/PIETOPIC/1,25.0/PIETOPIC/-1,8.0/PIETOPIC/0
-PIELIST+30 22.0/MTOPIC/1,24.0/MTOPIC/-1,21.0/MTOPIC/1,25.0/MTOPIC/-1,8.0/MTOPIC/0
+PIELIST+30 22.0/FTOPIC/1,24.0/FTOPIC/-1,21.0/FTOPIC/1,25.0/FTOPIC/-1,8.0/FTOPIC/0
+PIELIST+30 22.0/FMTOPIC/1,24.0/FMTOPIC/-1,21.0/FMTOPIC/1,25.0/FMTOPIC/-1,8.0/FMTOPIC/0
 
-PIELIST+30 20.5/PIETOPIC/-1,23.5/PIETOPIC/1,22.5/PIETOPIC/-1,24.5/PIETOPIC/0,9.0/PIETOPIC/1
-PIELIST+30 20.5/MTOPIC/-1,23.5/MTOPIC/1,22.5/MTOPIC/-1,24.5/MTOPIC/0,9.0/MTOPIC/1
+PIELIST+30 20.5/FTOPIC/-1,23.5/FTOPIC/1,22.5/FTOPIC/-1,24.5/FTOPIC/0,9.0/FTOPIC/1
+PIELIST+30 20.5/FMTOPIC/-1,23.5/FMTOPIC/1,22.5/FMTOPIC/-1,24.5/FMTOPIC/0,9.0/FMTOPIC/1
 
-PIELIST+30 25.0/PIETOPIC/1,21.0/PIETOPIC/-1,24.0/PIETOPIC/0,23.0/PIETOPIC/1,7.0/PIETOPIC/-1
-PIELIST+30 25.0/MTOPIC/1,21.0/MTOPIC/-1,24.0/MTOPIC/0,23.0/MTOPIC/1,7.0/MTOPIC/-1
+PIELIST+30 25.0/FTOPIC/1,21.0/FTOPIC/-1,24.0/FTOPIC/0,23.0/FTOPIC/1,7.0/FTOPIC/-1
+PIELIST+30 25.0/FMTOPIC/1,21.0/FMTOPIC/-1,24.0/FMTOPIC/0,23.0/FMTOPIC/1,7.0/FMTOPIC/-1
 
-PIELIST+30 21.5/PIETOPIC/-1,22.0/PIETOPIC/0,24.0/PIETOPIC/1,22.5/PIETOPIC/-1,10.0/PIETOPIC/1
-PIELIST+30 21.5/MTOPIC/-1,22.0/MTOPIC/0,24.0/MTOPIC/1,22.5/MTOPIC/-1,10.0/MTOPIC/1
+PIELIST+30 21.5/FTOPIC/-1,22.0/FTOPIC/0,24.0/FTOPIC/1,22.5/FTOPIC/-1,10.0/FTOPIC/1
+PIELIST+30 21.5/FMTOPIC/-1,22.0/FMTOPIC/0,24.0/FMTOPIC/1,22.5/FMTOPIC/-1,10.0/FMTOPIC/1
 
-PIELIST+30 22.5/PIETOPIC/0,23.5/PIETOPIC/1,21.0/PIETOPIC/-1,25.0/PIETOPIC/1,8.0/PIETOPIC/-1
-PIELIST+30 22.5/MTOPIC/0,23.5/MTOPIC/1,21.0/MTOPIC/-1,25.0/MTOPIC/1,8.0/MTOPIC/-1
+PIELIST+30 22.5/FTOPIC/0,23.5/FTOPIC/1,21.0/FTOPIC/-1,25.0/FTOPIC/1,8.0/FTOPIC/-1
+PIELIST+30 22.5/FMTOPIC/0,23.5/FMTOPIC/1,21.0/FMTOPIC/-1,25.0/FMTOPIC/1,8.0/FMTOPIC/-1
 
 #4 SECTORS
-PIELIST+30 24.5/PIETOPIC/1,25.5/PIETOPIC/-1,23.0/PIETOPIC/-1,27.0/PIETOPIC/1
-PIELIST+30 24.5/MTOPIC/1,25.5/MTOPIC/-1,23.0/MTOPIC/-1,27.0/MTOPIC/1
+PIELIST+30 24.5/FTOPIC/1,25.5/FTOPIC/-1,23.0/FTOPIC/-1,27.0/FTOPIC/1
+PIELIST+30 24.5/FMTOPIC/1,25.5/FMTOPIC/-1,23.0/FMTOPIC/-1,27.0/FMTOPIC/1
 
 #3 SECTORS
-PIELIST+30 33.5/PIETOPIC/1,31.0/PIETOPIC/-1,35.5/PIETOPIC/0
-PIELIST+30 33.5/MTOPIC/1,31.0/MTOPIC/-1,35.5/MTOPIC/0
+PIELIST+30 33.5/FTOPIC/1,31.0/FTOPIC/-1,35.5/FTOPIC/0
+PIELIST+30 33.5/FMTOPIC/1,31.0/FMTOPIC/-1,35.5/FMTOPIC/0
 
-PIELIST+30 35.0/PIETOPIC/-1,33.0/PIETOPIC/0,32.0/PIETOPIC/1
-PIELIST+30 35.0/MTOPIC/-1,33.0/MTOPIC/0,32.0/MTOPIC/1
+PIELIST+30 35.0/FTOPIC/-1,33.0/FTOPIC/0,32.0/FTOPIC/1
+PIELIST+30 35.0/FMTOPIC/-1,33.0/FMTOPIC/0,32.0/FMTOPIC/1
 
-PIELIST+30 34.0/PIETOPIC/0,31.0/PIETOPIC/-1,35.0/PIETOPIC/1
-PIELIST+30 34.0/MTOPIC/0,31.0/MTOPIC/-1,35.0/MTOPIC/1
+PIELIST+30 34.0/FTOPIC/0,31.0/FTOPIC/-1,35.0/FTOPIC/1
+PIELIST+30 34.0/FMTOPIC/0,31.0/FMTOPIC/-1,35.0/FMTOPIC/1
 
 OTHER+30 other
 OTHER+30 misc.
@@ -6850,7 +6867,7 @@ L1 north west
 L2 south west
 R1 north east
 R2 south east
-NLEN 6.5
+NLEN 6.8
 
 FTOPIC	\footnotesize{PIETOPIC}
 FMTOPIC	\footnotesize{MTOPIC}
