--- a/corprules.in
+++ b/corprules.in
@@ -6689,7 +6689,7 @@ SHORTITEM EXPANSION_ITEMs
 
 COSTITEMS+5 SHORTITEM
 COSTITEMS SCI_COUNTRY_MAYBE SHORTITEM
-COSTITEMS+2 EXP_ADJ SHORTITEM
+#COSTITEMS+2 EXP_ADJ SHORTITEM
 COSTITEMS+3 EXP_WHEREs
 
 PERUNIT per unit of
@@ -6880,8 +6880,8 @@ PIEFANCYLIST 15.0/COLOUR/FMTOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/FMTOPIC/1/1/1/R1/R2
 PIEFANCYLIST 22.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FTOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
 PIEFANCYLIST 22.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FMTOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 20.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
-PIEFANCYLIST 20.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,24.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 20.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FTOPIC/1/-1/-0.5/L1/L2/KINK,24.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 20.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FMTOPIC/1/-1/-0.5/L1/L2/KINK,24.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
 PIEFANCYLIST 25.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FTOPIC/1/-1/0/L1/L2/KINK,23.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
 PIEFANCYLIST 25.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FMTOPIC/1/-1/0/L1/L2/KINK,23.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
