--- a/corprules.in
+++ b/corprules.in
@@ -6884,8 +6884,8 @@ PIEFANCYLIST 22.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FMTOPIC/1/-NLEN/0/L
 PIEFANCYLIST 20.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FTOPIC/1/-1/-0.5/L1/L2/KINK,24.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
 PIEFANCYLIST 20.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FMTOPIC/1/-1/-0.5/L1/L2/KINK,24.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 25.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FTOPIC/1/-1/0/L1/L2/KINK,23.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
-PIEFANCYLIST 25.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FMTOPIC/1/-1/0/L1/L2/KINK,23.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 25.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FTOPIC/1/-1/-0.5/L1/L2/KINK,23.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST 25.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FMTOPIC/1/-1/-0.5/L1/L2/KINK,23.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
 PIEFANCYLIST 10.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 10.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/FMTOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/FMTOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
